Bug 1612006 - getDisplayMedia NotFoundError in firefox after upgrade to MacOS 10.15.3 r=spohl a=RyanVM

Update the heuristic-based screen recording permission check to be more
reliable but still imperfect.

Add pref "media.macos.screenrecording.oscheck.enabled" (true by default) to
allow bypassing the permission check as a workaround and for testing.
i.e., when the pref is set,
nsIOSPermissionRequest::getScreenCapturePermissionState() always returns
PERMISSION_STATE_AUTHORIZED on macOS.

Differential Revision: https://phabricator.services.mozilla.com/D61909